[tool.poetry]
name = "dndbot"
version = "0.1.0"
description = ""
authors = ["Michael Piccirillo <70709374+Khrysys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
ijson = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
